# helicopterFreeRTOSAssignment

./: .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  CMakeLists.txt  README.md  \
TivaWare/: CMakeLists.txt
TivaWare/driverlib/: CMakeLists.txt
TivaWare/utils/: CMakeLists.txt
cmake/: README.md  docs.cmake  tiva-toolchain.cmake  tiva.cmake
debug/: openocd.cfg
demo_code/: blinky_demo.c
inc/: FreeRTOSConfig.h  README.md
inc/FreeRTOS/: CMakeLists.txt  FreeRTOSConfig.h
inc/Heli/: CMakeLists.txt  heli.h  heli_config.h
inc/Heli/heli/: OrbitOLEDInterface.c  controller.c  controller.h  height.c  height.h  heli.c  heli.h  heli_display.c  heli_display.h  heli_status.c  heli_status.h  input.c  input.h  logging.c  logging.h  main_rotor.c  main_rotor.h  menu.c  menu.h  pid.c  pid.h  plot.c  plot.h  rotors.c  rotors.h  tail_rotor.c  tail_rotor.h  yaw.c  yaw.h
inc/Heli/tmp/: yaw.c  yaw.h
inc/OrbitOLED/: CMakeLists.txt
inc/tiva_linkers/: README.md  tm4c123gh6pm.lds
lib/: README.md
lib/FreeRTOS/: FreeRTOSConfig.h
lib/Heli/: README.md  heli_config.h
lib/Heli/heli/: height.c  height.h  heli.c  heli.h  heli_display.h  heli_status.c  heli_status.h  helicopter_image.h  input.c  logging.c  menu.c  menu.h  pid.c  plot.c  plot.h  rotors.c  rotors.h  stickman_image.h  yaw.c
lib/tiva_linkers/: tm4c123gh6pm.ld
scripts/: Helicopter.h  README.md  arrow.h  clear  gen_img.py  test.py
scripts/helirig-vulnerability/: README.md  kick.elf  remote-connect  rick-roll.elf  run-gdb
scripts/helirig-vulnerability/gdb-scripts/: kick.cfg  rick-roll.cfg
scripts/js/: README.md  heli_key_bindings.js  heli_loader.js  heli_menu.js  heli_plot.js  heli_sounds.js  redesign_heli.js
src/: FreeRTOSConfig.h  adc_buffer.c  adc_buffer.h  controller.c  controller.h  main.c  tm4c123gh6pm_startup.c
